@@ -1,3 +1,11 @@
+2026-01-19  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* tests/smoke-test.sh: Skip test if Perl's Math::Trig module is
+	not available.
+
+	Thanks to Bruno Haible for the report.  See <https://lists.gnu\
+	.org/archive/html/groff/2026-01/msg00075.html>.
+
 2026-01-13  Norwid Behrnd <nbehrnd@yahoo.com>
 
 	* examples/lsd.chem: Improve visual representation.  Reorganize
